--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -40,7 +40,8 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-inverse navbar-fixed-top" >
+            <asp:ContentPlaceHolder ID="navBar" runat="server">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -53,11 +54,12 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/About">Acerca de</a></li>
-                        <li><a runat="server" href="~/Contact">Contacto</a></li>
+                        <li><a runat="server" href="~/Favoritos">Favoritos</a></li>
+                        <li><a runat="server" href="~/Pedidos">Pedidos</a></li>
                     </ul>
                 </div>
             </div>
+                </asp:ContentPlaceHolder>
         </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
