--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -49,11 +49,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
+                        <li><a runat="server" href="~/Login">Inicio</a></li>
                         <li><a runat="server" href="~/Favoritos">Favoritos</a></li>
                         <li><a runat="server" href="~/Pedidos">Pedidos</a></li>
                     </ul>
