--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -1,6 +1,6 @@
-﻿<!DOCTYPE html>
+﻿﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Web.SiteMaster" %>
+<!DOCTYPE html>
 <html lang="es">
-<<<<<<< HEAD
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
@@ -16,20 +16,10 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="MainPage.css" rel="stylesheet" />
 
-=======
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Inicio</title>
->>>>>>> a4376cbcde104823a65e490bff662db25bdea7f6
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Bienvenido a la Página de Inicio</h1>
-    <p>¡Explora nuestros restaurantes!</p>
-    <!-- Enlace a la página de restaurantes -->
-    <a href="Restaurantes.aspx">Ver Restaurantes</a>
-=======
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -50,32 +40,7 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
-<<<<<<< HEAD
         
-=======
-        <div class="navbar navbar-inverse navbar-fixed-top" >
-            <asp:ContentPlaceHolder ID="navBar" runat="server">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nombre de la aplicación</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
-                        <li><a runat="server" href="~/Favoritos">Favoritos</a></li>
-                        <li><a runat="server" href="~/Pedidos">Pedidos</a></li>
-                    </ul>
-                </div>
-            </div>
-                </asp:ContentPlaceHolder>
-        </div>
->>>>>>> a4376cbcde104823a65e490bff662db25bdea7f6
         <div class="container body-content">
             <header>
                 <div class ="TopContainer">
@@ -89,20 +54,23 @@
                     <div class="TopElement">
                         <div class ="LogButtons">
                             <div class="mitad">
-                                <asp:Button ID="Login" runat="server" Text="Sing In" />
-                                <asp:Button ID="Registro" runat="server" Text="Sing Up" />
+                                <asp:Button ID="Login" runat="server" Text="Sing In" OnClick="GoLogIn"/>
+                                <asp:Button ID="Registro" runat="server" Text="Sing Up" OnClick="GoSignIn"/>
                             </div>
 
-                            <asp:Button class="entero" ID="Perfil" runat="server" Text="Profile"/> <%-- falta el evento  --%>
+                            <asp:Button class="entero" ID="Perfil" runat="server" Text="Profile" OnClick="GoPerfil"/> <%-- falta el evento  --%>
                         </div>
                     </div>                    
                 </div>
                 <nav class="navbar">
                     <ul class="menu">
-                        <li><a href="#">RESTAURANTES</a></li>
-                        <li><a href="#">PLATOS</a></li>
-                        <li><a href="#">RECOMENDACIONES</a></li>
-                        <li><a href="#">CONTACTO</a></li>
+                        <li><a href="Restaurantes">RESTAURANTES</a></li>
+                        <li><a href="Platos">PLATOS</a></li>
+                        <li><a href="Recomendaciones">RECOMENDACIONES</a></li>
+                        <li><a href="Favoritos">FAVORITOS</a></li>
+                        <li><a href="Pedidos">PEDIDOS</a></li>
+                        <li><a href="Cesta">CESTA</a></li>
+                        <li><a href="Contact">CONTACTO</a></li>
                         <li><a href="#">QUIENES SOMOS</a></li>
                     </ul>
                 </nav>
@@ -117,6 +85,5 @@
         </div>
 
     </form>
->>>>>>> 55356368Z
 </body>
 </html>
