--- a/Web/styles.css
+++ b/Web/styles.css
@@ -71,7 +71,7 @@
     .cesta-grid td {
         padding: 8px;
         text-align: left;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #8a2be2;
     }
 
 .btn-eliminar,
@@ -87,3 +87,71 @@
     margin: 4px 2px;
     cursor: pointer;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    text-align: center;
+    color: #333;
+}
+
+.menu-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu-item {
+    border-bottom: 1px solid #ccc;
+    padding: 20px 0;
+}
+
+.menu-item-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.menu-item-price {
+    font-weight: bold;
+    color: #666;
+}
+
+.menu-item-description {
+    margin-bottom: 10px;
+}
+
+.menu-item-alergenos {
+    color: #999;
+    margin-bottom: 10px;
+}
+
+.btn-add-cart {
+    background-color: #8a2be2;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+    .btn-add-cart:hover {
+        background-color: #45a049;
+    }
