--- a/Web/MainPage.css
+++ b/Web/MainPage.css
@@ -1,37 +1,63 @@
-﻿.TopContainer{
-    overflow: hidden;
+﻿html {
+    height: 100%;
 }
 
-.TopElement{
-    float: left;
-}
-
-.LogButtons {
+body {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    height: 60px;
-    margin-left: 700px;
 }
 
-button {
-    width: 100%;
-    height: calc(50% - 5px);
-    margin-bottom: 10px;
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333333;
+    background-color: #fa6be4;
 }
 
-button {
-    margin-bottom: 10px; /* Margen entre los botones */
-}
-
-.mitad {
+.container {
+    flex: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-.entero {
-    width: 125px; /* El botón 3 ocupará el ancho completo */
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #692A8A;
+    text-align: center;
+    padding: 10px;
+    color: #fff;
+}
+
+
+
+.TopContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+}
+
+.LogoMenu {
+    flex: 0 0 auto;
+}
+
+.AuthButtons {
+    flex: 0 0 auto;
+}
+
+.AuthButtons > asp\:Panel {
+    display: inline;
+}
+
+
+.TopElement {
+    display: flex;
+    align-items: center;
 }
 
 .navbar {
@@ -43,13 +69,11 @@ button {
 }
 
 .menu {
-    
     list-style-type: none;
     text-align: center;
 }
 
 .menu li {
-    
     margin-right: 20px;
     display: inline;
 }
@@ -66,6 +90,5 @@ button {
 }
 
 .menu li a:hover {
-    background-color: #333;
+    background-color: hotpink;
 }
-
