--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -68,7 +68,7 @@
                         <li><a href="Platos">PLATOS</a></li>
                         <li><a href="Recomendaciones">RECOMENDACIONES</a></li>
                         <li><a href="Contact">CONTACTO</a></li>
-                        <li><a href="About">QUIENES SOMOS</a></li>
+                        <li><a href="Quienessomos">QUIENES SOMOS</a></li>
                     </ul>
                 </nav>
             </header>
