--- a/Web/MainPage.css
+++ b/Web/MainPage.css
@@ -13,7 +13,7 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333333;
-    background-color: #fa6be4;
+    background-color: #fff;
 }
 
 .container {
