48776654W y 74392984J: Arreglos impresionants bb

--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -75,7 +75,7 @@
                         <li><a href="Contact">CONTACTO</a></li>
                         <li><a href="Quienessomos">QUIENES SOMOS</a></li>
                       
-                            <li><a href="CambiarMenu">CAMBIAR MENÚ</a></li>
+                            <li><a href="FAQS">FAQs</a></li>
                      
                     </ul>
                 </nav>
