48776654W y 74392984J: FAQs y Quienes Somos funcionales

--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -73,7 +73,7 @@
                         <li><a href="Platos">PLATOS</a></li>
                         <li><a href="Recomendaciones">RECOMENDACIONES</a></li>
                         <li><a href="Contact">CONTACTO</a></li>
-                        <li><a href="Quienessomos">QUIENES SOMOS</a></li>
+                        <li><a href="Quienes">QUIENES SOMOS</a></li>
                         <li><a href="FAQS">FAQs</a></li>
                     </ul>
                 </nav>
