--- a/Web/MainPage.css
+++ b/Web/MainPage.css
@@ -1,14 +1,12 @@
-﻿html {
+﻿html, body {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    min-height: 100%;
     display: flex;
     flex-direction: column;
-}
-
-body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
@@ -20,20 +18,23 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+main {
+    flex: 1;
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     background-color: #692A8A;
     text-align: center;
     padding: 10px;
     color: #fff;
 }
-
-
 
 .TopContainer {
     display: flex;
@@ -50,10 +51,9 @@ footer {
     flex: 0 0 auto;
 }
 
-.AuthButtons > asp\:Panel {
-    display: inline;
-}
-
+    .AuthButtons > asp\:Panel {
+        display: inline;
+    }
 
 .TopElement {
     display: flex;
@@ -71,24 +71,26 @@ footer {
 .menu {
     list-style-type: none;
     text-align: center;
+    padding: 0;
+    margin: 0;
 }
 
-.menu li {
-    margin-right: 20px;
-    display: inline;
-}
+    .menu li {
+        margin-right: 20px;
+        display: inline;
+    }
 
-.menu li:last-child {
-    margin-right: 0;
-}
+        .menu li:last-child {
+            margin-right: 0;
+        }
 
-.menu li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 15px;
-    text-transform: uppercase;
-}
+        .menu li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 15px;
+            text-transform: uppercase;
+        }
 
-.menu li a:hover {
-    background-color: hotpink;
-}
+            .menu li a:hover {
+                background-color: hotpink;
+            }
