48776654W y 74392984J: Añadido CONTACTO y FAQS al footer y eliminados del menu de navegacion

--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -72,9 +72,7 @@
                         <li><a href="Restaurantes">RESTAURANTES</a></li>
                         <li><a href="Platos">PLATOS</a></li>
                         <li><a href="Recomendaciones">RECOMENDACIONES</a></li>
-                        <li><a href="Contact">CONTACTO</a></li>
                         <li><a href="Quienes">QUIENES SOMOS</a></li>
-                        <li><a href="FAQS">FAQs</a></li>
                     </ul>
                 </nav>
             </header>
@@ -84,12 +82,14 @@
             </main>
         </div>
         <footer>
-            <div class="social-media">
-                <a href="https://www.instagram.com/Second_Bite" target="_blank">Instagram</a>
-                <a href="https://twitter.com/SecondBite" target="_blank">Twitter</a>
-                <a href="https://www.facebook.com/SecondBite" target="_blank">Facebook</a>
-                <span>&copy; <%: DateTime.Now.Year %> - SecondBite</span>
-            </div>
+            <p>
+                <a href="https://www.instagram.com/Second_Bite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Instagram</a>
+                <a href="https://twitter.com/SecondBite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Twitter</a>
+                <a href="https://www.facebook.com/SecondBite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Facebook</a>
+                <a href="Contact.aspx" style="color: white; text-decoration: none; margin-right: 15px;">CONTACTO</a>
+                <a href="FAQs.aspx" style="color: white; text-decoration: none; margin-right: 15px;">FAQS</a>
+                © 2024 - SecondBite
+            </p>
         </footer>
     </form>
 </body>
