--- a/Web/MainPage.css
+++ b/Web/MainPage.css
@@ -36,20 +36,18 @@ footer {
     color: #fff;
 }
 
-.social-media {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-}
-
-    .social-media a {
-        color: #fff;
-        text-decoration: none;
+    footer p {
+        margin: 0;
     }
 
-        .social-media a:hover {
-            text-decoration: underline;
+    footer a {
+        color: white;
+        text-decoration: none;
+        margin-right: 15px;
+    }
+
+        footer a:last-child {
+            margin-right: 0;
         }
 
 .TopContainer {
