--- a/Web/Perfil.css
+++ b/Web/Perfil.css
@@ -5,35 +5,42 @@
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between; /* Cambia a space-between para distribuir el espacio */
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.ProfileElement {
-    margin: 10px;
+.ProfilePic {
+    flex: 0 0 150px; /* Ajusta el tamaño de la imagen de perfil */
     text-align: center;
 }
 
-.ProfilePic img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    .ProfilePic img {
+        width: 150px; /* Ajusta el tamaño de la imagen */
+        height: 150px; /* Ajusta el tamaño de la imagen */
+        border-radius: 50%;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+
+.TextInfo {
+    flex: 1; /* Permite que el texto ocupe el espacio restante */
+    margin-left: 20px; /* Añade espacio entre la imagen y el texto */
 }
 
-.TextInfo h1 {
-    font-size: 24px;
-    color: #333;
-    margin: 10px 0;
-}
+    .TextInfo h1 {
+        font-size: 24px;
+        color: #333;
+        margin: 10px 0;
+    }
 
-.TextInfo p {
-    font-size: 16px;
-    color: #555;
-}
+    .TextInfo p {
+        font-size: 16px;
+        color: #555;
+    }
 
 .ProfileActions {
+    flex: 0 0 auto;
+    text-align: center;
     margin-top: 20px;
 }
 
@@ -44,14 +51,14 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
-        background-color: #4CAF50;
+        background-color: #692A8A; /* Color lila */
         color: white;
         text-decoration: none;
         transition: background-color 0.3s;
     }
 
         .ProfileActions .btn:hover {
-            background-color: #45a049;
+            background-color: #5a1f75; /* Color lila oscuro al pasar el ratón */
         }
 
 .OpinionList {
