--- a/Web/Site.Master
+++ b/Web/Site.Master
@@ -83,9 +83,9 @@
         </div>
         <footer>
             <p>
-                <a href="https://www.instagram.com/Second_Bite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Instagram</a>
-                <a href="https://twitter.com/SecondBite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Twitter</a>
-                <a href="https://www.facebook.com/SecondBite" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Facebook</a>
+                <a href="https://www.instagram.com/secondbiteweb/" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Instagram</a>
+                <a href="https://x.com/secondbiteweb" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Twitter</a>
+                <a href="https://www.facebook.com/people/SecondBite/61559970635101/" target="_blank" style="color: white; text-decoration: none; margin-right: 15px;">Facebook</a>
                 <a href="Contact.aspx" style="color: white; text-decoration: none; margin-right: 15px;">CONTACTO</a>
                 <a href="FAQs.aspx" style="color: white; text-decoration: none; margin-right: 15px;">FAQS</a>
                 © 2024 - SecondBite
